# ConnectedPapersExtractor

./: .gitignore  Makefile  README.md  pyproject.toml  sandbox.py  setup.cfg
.doctrees/: environment.pickle  index.doctree
src/ConnectedPapersExtractor/: ArticleFilter.py  Config.py  MainPartsExtractor.py  PdfSummary.py  _AIExtractor.py  __init__.py  _add_docs.py  _combine_summaries.py  _extract_documents.py  _get_embeddings.py  _get_pdf_summaries.py  _get_urls.py  combine_summaries.py  conv2docs.py  create_related_work.py  extract_main_parts.py  extract_relevant_docs.py  filter_relevant.py  get_summaries.py  summarize_documents.py  summarize_documents_piecemeal.py
src/connectedpapersextractor/: PdfSummary.py  _AIExtractor.py  _BasicFilter.py  __init__.py  _add_docs.py  _download_summaries.py  _download_summaries_from_arxiv.py  _download_summaries_from_connected_papers.py  _get_existing_summaries.py  _refine_documents.py  _stuff_documents.py  _summarize_documents.py  _summarize_documents_piecemeal.py  article.py  create_related_work.py  get_summaries_from_arxiv.py  get_summaries_from_connected_papers.py
src/connectedpapersextractor/services/: article_filter.py  convert_service.py  main_parts_extractor.py  sumaries_combine.py  summarizer.py  text_splitter.py
src/connectedpapersextractor/utils/: AIExtractor.py  BasicFilter.py  add_docs.py  combine_summaries.py  download_summaries.py  download_summaries_from_arxiv.py  download_summaries_from_connected_papers.py  get_existing_summaries.py  huggingface_reduce.py  refine_documents.py  stuff_documents.py  summarize_documents.py
