[metadata]
name =
version = 0.0.0
author = Tesla2000
author_email = fratajczak124@gmail.com
description =
long_description = file: README.md
long_description_content_type = text/markdown
url =
project_urls =
    Homepage =
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.7
install_requires =
    EnhancedWebdriver>=0.1.0
    arxiv>=2.1.0
    pypdf>=4.2.0
    langchain>=0.1.16
    cffi>=1.16.0
[options.packages.find]
where = src