[metadata]
name = ConnectedPapersExtractor
version = 0.1.0
author = Tesla2000
author_email = fratajczak124@gmail.com
description =
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/Tesla2000/ConnectedPapersExtractor
project_urls =
    Homepage = https://github.com/Tesla2000/ConnectedPapersExtractor
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.8.1
install_requires =
    EnhancedWebdriver
    arxiv
    langchain
[options.packages.find]
where = src