[metadata]
name = ConnectedPapersExtractor
version = 0.2.0
author = Tesla2000
author_email = fratajczak124@gmail.com
description =
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/Tesla2000/ConnectedPapersExtractor
project_urls =
    Homepage = https://github.com/Tesla2000/ConnectedPapersExtractor
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.8.1
install_requires =
    langchain>=0.1.16
    langchain-openai>=0.1.3
    undetected-chromedriver>=3.5.5
    pypdf>=4.2.0
    download>=0.3.5
    chromedriver-autoinstaller>=0.6.4
    langchain-experimental>=0.0.57
    PyPDF2>=3.0.1
    faiss-cpu>=1.8.0
    EnhancedWebdriver>=0.1.6
[options.packages.find]
where = src